--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -96,12 +96,7 @@
 	<h3>Complaint</h3>
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
-<p>You can provide feedback on service you received from the CRA.</p>
-	
-	 
-
-	<h3>Options to provide feedback</h3>
-			
+<p>You have several ways to provide feedback on service you received from the CRA.</p>
 	<ul>
 		<li>By phone - Call the CRA</li>	
 		<li>By form - Complete the form</li>
@@ -112,18 +107,21 @@
 			
 	<ul>
 		<li>Online dynamic form</li>	
-		<li>Fillable PDF form RC193</li>
-	</ul>
-			
-		
-	<h3>Ways to submit your feedback</h3>
-			
-	<ul>
+		<li>Fillable PDF form RC193<br>
+			<details>
+<summary>Ways to submit your PDF form to the CRA</summary>
+    <ul>
 		<li>Online dynamic form</li>	
 		<li>Online CRA account - (My account, My Bus, Rep a client)</li>
 		<li>By fax</li>
 		<li>By mail</li>
 	</ul>
+ </details>
+
+		</li>
+	</ul>
+			
+		
 	<h3>After you submit your feedback</h3>
 	<p>Your feedback will be forwarded to the:</p>
 		<ul>
