--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -75,7 +75,13 @@
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 type of feedback you can give the CRA.</p>
 	
-	<div class="cnjnctn-type-or">
+	<dl class="dl-horizontal brdr-0 mrgn-bttm-sm">
+<dt class="h3 mrgn-tp-0">Compliment</dt> <dd><p>Submit a positive experience you had with the CRA</p>
+</dd> <dt class="h3 mrgn-tp-0">Suggestion</dt> <dd><p>Suggest an improvement for the CRA</p>
+</dd> <dt class="h3 mrgn-tp-0">Complaint</dt> <dd><p>Submit a complaint about the CRA</p>
+</dd></dl>
+	
+	<!--<div class="cnjnctn-type-or">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Compliment<span class="wb-inv">: Option 1 of X</span></h4>
 <p>Submit a positive experience with the CRA</p>
@@ -87,7 +93,7 @@
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Complaint<span class="wb-inv">: Option 3 of X</span></h4>
 <p>Submit a complaint about the CRA</p>
-</div></div>
+</div></div>-->
 	<div class="clear"></div>
 	<!--<h3>Compliment</h3>
 	<p>You can submit feedback about a positive experience with the service that you received from the CRA. Your feedback will be forwarded onto the responsible manager and/or employee for recognition. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
