--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -102,7 +102,7 @@
 	<h3>Complaint</h3>
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
-<p>You have several ways to provide feedback on service you received from the CRA.</p>
+<p>You have several ways to provide feedback on service you received from the CRA:</p>
 	<ul>
 		<li>By phone - Call the CRA</li>	
 		<li>By form - Complete the form</li>
