--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -75,7 +75,7 @@
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 type of feedback you can give the CRA.</p>
 	
-	<dl class="dl-horizontal brdr-0 mrgn-bttm-sm">
+	<dl class="dl-horizontal">
 <dt class="h3 mrgn-tp-0">Compliment</dt> <dd><p>Submit a positive experience you had with the CRA</p>
 </dd> <dt class="h3 mrgn-tp-0">Suggestion</dt> <dd><p>Suggest an improvement for the CRA</p>
 </dd> <dt class="h3 mrgn-tp-0">Complaint</dt> <dd><p>Submit a complaint about the CRA</p>
