--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -1,7 +1,6 @@
 
 <!DOCTYPE html>
 <!--[if lt IE 9]>
-<html class="no-js lt-ie9" lang="en" dir="ltr">
    <![endif]-->
    <!--[if gt IE 8]><!-->
    <html class="no-js" lang="en" dir="ltr">
@@ -431,7 +430,9 @@ margin-left: 38px;
 <p>For detailed information about overhead and other expenditures, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/overhead-other-expenditures-policy.html">SR&amp;ED Overhead and Other Expenditures Policy</a>.</p>
 		 
 <h3 id="h6-1">Traditional and proxy methods</h3>
-<p>You must choose to use either the traditional method or the proxy method to calculate your expenditures for the tax year you’re claiming. Each method has its own advantages and disadvantages.</p>
+<p>You must choose to use either the traditional method or the proxy method to calculate your expenditures for the tax year you’re claiming. You cannot change the calculation method you chose after you have submitted your SR&amp;ED claim.</p>
+
+<p>Each method has its own advantages and disadvantages.</p>
 		 <dl class="dl-horizontal brdr-0">
   <dt>Traditional method</dt>
   <dd>Using the traditional method, you must identify all your overhead and other expenditures in your calculation of allowable expenditures</dd>
@@ -486,7 +487,7 @@ margin-left: 38px;
   <li>the PPA may be less than the actual overhead and other expenditures incurred </li>
 </ul>
      </details>    
-<p>You cannot change the calculation method you chose after you have submitted your SR&amp;ED claim.</p>
+
 <p>If you don&rsquo;t  select a method, the CRA will process your claim using the traditional method.</p>             
 
 <p>For detailed information about choosing between the traditional or proxy methods, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/traditional-proxy-methods-policy.html">Traditional and Proxy Methods Policy</a>.</p>
