--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -430,16 +430,17 @@ margin-left: 38px;
 <p>For detailed information about overhead and other expenditures, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/overhead-other-expenditures-policy.html">SR&amp;ED Overhead and Other Expenditures Policy</a>.</p>
 		 
 <h3 id="h6-1">Traditional and proxy methods</h3>
-<p>You must choose to use either the traditional method or the proxy method to calculate your expenditures for the tax year you’re claiming. You cannot change the calculation method you chose after you have submitted your SR&amp;ED claim.</p>
+<p>You must choose to use either the traditional method or the proxy method to calculate your expenditures for the tax year you’re claiming. You cannot change the calculation method you chose after you have submitted your SR&amp;ED claim. If you don&rsquo;t  select a method, the CRA will process your claim using the traditional method.
+</p>
 
-<p>Each method has its own advantages and disadvantages.</p>
+
 		 <dl class="dl-horizontal brdr-0">
   <dt>Traditional method</dt>
   <dd>Using the traditional method, you must identify all your overhead and other expenditures in your calculation of allowable expenditures</dd>
   <dt>Proxy method</dt>
   <dd>Using the proxy method, you do not calculate your overhead expenses, but instead use a substitute (or proxy) amount in your calculation of allowable expenditures</dd>
 </dl>
- 
+ <p>Each method has its own advantages and disadvantages.</p>
 
  <details>
  <summary>Why use the traditional method</summary>         
@@ -488,7 +489,6 @@ margin-left: 38px;
 </ul>
      </details>    
 
-<p>If you don&rsquo;t  select a method, the CRA will process your claim using the traditional method.</p>             
 
 <p>For detailed information about choosing between the traditional or proxy methods, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/traditional-proxy-methods-policy.html">Traditional and Proxy Methods Policy</a>.</p>
 		 
