--- a/sred/scientific-research-experimental-development-tax-incentive-program/after.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/after.html
@@ -103,8 +103,8 @@
 	<li><a href="#h6">Get support after you claim</a></li>
 </ul>
 <h2 id="h1">Processing time</h2>
-		 <p>Your SR&amp;ED claim will be processed <strong>within 60&nbsp; calendar days</strong> of the date we receive your completed claim and your income tax return for the  year.</p>
-		 <p>Refundable claims selected for review will be completed <strong>within 180 calendar days</strong>.</p>
+		 <p>Your SR&amp;ED claim will generally be processed <strong>within 60&nbsp; calendar days</strong> of the date we receive your completed claim and your income tax return for the year.</p>
+		 <p>Refundable claims selected for review will generally be completed <strong>within 180 calendar days</strong> of the date we receive your completed claim.</p>
 <p>For detailed information about processing times, review the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/program-service-standards.htmlthe">SR&amp;ED program service standards</a>.</p>
 		 
 <h3 id="h1-1">Check the status of your claim</h3>
