--- a/sred/scientific-research-experimental-development-tax-incentive-program/after.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/after.html
@@ -97,7 +97,7 @@
 <h2 class="h3">On this page</h2>
 <ul>
   <li><a href="#h1">Processing time</a></li>
-    <li><a href="#h3">If your claim needs a detailed review</a></li>
+    <li><a href="#h3">If your claim needs a review</a></li>
   <li><a href="#h4">If your claim needs advisory support</a></li>
   <li><a href="#h5">Disagreeing with our decision</a></li>
 	<li><a href="#h6">Get support after you claim</a></li>
@@ -114,7 +114,7 @@
 <h3 id="h2">Submit information before the deadline</h3>
 <p>If the CRA contacts you because your claim is incomplete, you must submit the missing information before the SR&amp;ED <a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html#h2">reporting deadline</a>.</p>
 		 <p>If the reporting deadline has passed, the CRA will <strong>not accept</strong> any additional information, and the SR&amp;ED expenditures and related ITC will be lost.</p>
-<h2 id="h3">If your claim needs a detailed review</h2>
+<h2 id="h3">If your claim needs a review</h2>
 <p>Some claims may be selected for further review. The purpose of a review is to gather the necessary information for the CRA to make a decision about your claim. This can happen if we were not able to confirm the eligibility of the work based on  the information provided. We  may also need further information about the expenditures being claimed.</p>
 <p>In some cases, the CRA may request an on-site meeting to ask further questions or clarify details. You may be asked to provide <a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html#h3">supporting records</a> to help reviewers understand the work done, and how expenses  associated with the work were determined.</p>		 
 <p> We recommend senior technical and financial personnel be available to provide in-depth knowledge of the work and the company&rsquo;s finances.</p>
