--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
@@ -119,16 +119,20 @@
 
 <h2 class="h3">On this page</h2>
 <ul>
-  <li><a href="#h1">Use your SR&amp;ED ITC to reduce income tax payable</a></li>
+  <li><a href="#h1">Use your ITC to reduce income tax payable or get a refund</a></li>
   <li><a href="#h2">Understand ITC rates</a></li>
   <li><a href="#h3">Determine your expenditure limit</a></li>
-  <li><a href="#h4">Carry back or carry forward an ITC</a></li>
-  <li><a href="#h5">Refundable ITC</a></li>
+  <li><a href="#h4">Refundable ITC</a></li>
+  <li><a href="#h5">Non-refundable ITC</a></li>
 	<li><a href="#h7">Recapture of ITC</a></li>
   <li><a href="#h6">Get support with your ITC</a></li>
 </ul>
-<h2 id="h1">Use your SR&amp;ED ITC to reduce income tax payable</h2>
-<p>You may earn an  investment tax credit (ITC) on your qualified SR&amp;ED expenditures for the  year, which may reduce your income tax payable. If you have excess  ITCs in the year and are eligible, you may also get a refund.</p>
+<h2 id="h1">Use your ITC to reduce income tax payable or get a refund</h2>
+<p>You may earn an investment tax credit (ITC) on your qualified SR&ED expenditures for the year. The ITC can be:</p>
+	<ul>
+		<li>non-refundable (which may reduce your income tax payable)</li>
+		<li>refundable (if you have excess ITCs in the year and are eligible)</li>
+		 </ul>
 <h3>Who can get an ITC</h3>
 <p> The following entities may earn an ITC on their qualified SR&amp;ED expenditures:</p>
 <ul>
@@ -190,7 +194,7 @@
 </ul>
     
 <p>For detailed information about associated corporations, review <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-2-page-2-t2-return.html#P920_78532">Schedule 9, Related and Associated Corporations.</a></p>
-<h2 id="h5">Refundable ITC</h2>
+<h2 id="h4">Refundable ITC</h2>
 <p>Claimants may be able to have some or all of their SR&amp;ED ITC refunded. If there is no tax payable, the ITC earned for the year may be refunded.</p>
 <p>Most CCPCs can earn a refundable ITC calculated at the enhanced rate of 35% on qualified expenditures up to their expenditure limit for the tax year. Individuals may get a partial refund of their ITC earned at 15%. Generally an  ITC can only be refunded in the year that the qualified expenditure occurred.</p>
 <p>The refund rate varies depending on if the claimant is a corporation, an individual, a trust, or a partner in a partnership.</p>
@@ -250,11 +254,12 @@
 <p>Source: <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#ppx1">SR&amp;ED ITC Policy, Appendix A</a></p>
 </details>    
 <p>To learn more about refundable ITC for various entities, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#s4_1">Section 4.1, SR&amp;ED ITC Policy</a>.</p>
-<h2 id="h4">Carry back or carry forward an ITC</h2>
+<h2 id="h5">Non-refundable ITC<h2> 
+ <h3>Carry back or carry forward an ITC</h3>
 <p>Claimants who have an unused  ITC beyond the amount needed to reduce income tax payable to zero may carry it back 3 years or carry it forward 20 years. This lets you use the credit to reduce your tax  payable for other years.</p>
 <p>A refunded ITC  will reduce the credit available for carry back or forward.</p>
 <p>To learn more about carrying back ITCs, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#s3_3_2">Section 2.3.2, SR&amp;ED ITC Policy</a>.</p>
-<h2 id="h7">Recapture of ITC</h2>
+<h3>Recapture of ITC</h3>
 <p>If you sell materials transformed or convert them to commercial use, you may have an investment tax credit (ITC) recapture amount you need to report.</p>
 <p>An ITC recapture is triggered if you previously claimed the cost of the sold or converted property as an SR&amp;ED expenditure for ITC purposes. The recapture is intended to make sure that you only claim SR&amp;ED tax incentives on the net costs of conducting SR&amp;ED work.</p>
 <p>Since it’s not always possible to determine net costs at the start of a project, the recapture reverses all or a portion of the SR&amp;ED ITC you earned by adding an amount to your tax payable for the year in which the sale or conversion of the property takes place.</p>	          
