--- a/subway/uht/whomust-interactivetool.html
+++ b/subway/uht/whomust-interactivetool.html
@@ -761,7 +761,7 @@ margin-left: 38px;
 				href: "https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies.html"
 			    },{
 				title: "Underused Housing Tax",
-				href: "https://test.canada.ca/cra-arc/subway/uht/index.html"
+				href: ""
 			    }],
 			search: true,
 			siteMenu: true,
@@ -981,7 +981,7 @@ margin-left: 38px;
               <h5>If you own more than one property (special rule)</h5>
               <div data-ajax-replace="#h_1_3_1_content"><a href="#h_1_3_1">Special rule for individual owners of multiple residential properties</a></div>
             </div>
-            <p>You can continue to <a href="#h_2">penalties for failing to file the return on time</a>.</p>
+           
           </div>
           <div id="exemption-no" tabindex="0" class="hidden">
             <div class="alert alert-info">
