--- a/payroll/file/how.html
+++ b/payroll/file/how.html
@@ -174,7 +174,7 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 <p>The CRA encourages you to file your returns electronically. However, if you <strong>do not</strong> have to <a href="#h_1_1">file electronically</a>, you can file on paper.</p>
 
 <details><summary><span class="fas fa-envelope-open-text fa-lg text-muted"></span> By paper </summary>
-<p>If you file on paper:</p>
+<p>If you file a paper return:</p>
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You must fill out one copy of each slip for each employee or recipient and include it with your summary when you file </li>
 <li><span class="fas fa-check text-success fa-li"></span> Enter the information for two different employees or recipients on one sheet </li>
@@ -213,7 +213,7 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/agr-1.html">AGR-1, Statement of Farm-support Payments</a> </li>
-<li><span class="label label-info">New for 2023 - No return available</span> First Home Savings Account (FHSA) Annual Information Return </li>
+<li><span class="label label-warning">New - Effective April 1, 2023</span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/what-happens-contribute-transfer-too-much.html"> First Home Savings Account (FHSA) Annual Information Return </a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/nr4.html">NR4, Statement of Amounts Paid or Credited to Non-Residents of Canada</a> </li>
 
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/completing-slips-summaries/financial-slips-summaries/partxix-information-return-international-exchange-information-financial-accounts-slips-summary.html">Part XVIII Information Return &ndash; International Exchange of Information on Financial Accounts</a> </li>
@@ -230,16 +230,15 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4a.html">T4A, Statement of Pension, Retirement, Annuity, and Other Income</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4a-nr.html">T4A-NR, Statement of Fees, Commissions, or Other Amounts Paid to Non-Residents for Services Rendered in Canada</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/understand-your-tax-slips/t4-slips/t4a-oas-statement-old-security.html">T4A(OAS), Statement of Old Age Security</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4e.html">T4E, Statement of Employment Insurance and Other Benefits</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/tax-slips/understand-your-tax-slips/t4-slips/t4a-p-statement-canada-pension-plan-benefits.html">T4A(P), Statement of Canada Pension Plan Benefits</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4e.html">T4E, Statement of Employment Insurance and Other Benefits</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4rif.html">T4RIF, Statement of Income from a Registered Retirement Income Fund</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4rsp.html">T4RSP, Statement of RRSP Income</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5.html">T5, Statement of Investment Income</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5007.html">T5007, Statement of Benefits</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5008.html">T5008, Statement of Securities Transactions</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5018.html">T5018, Statement of Contract Payments</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5013.html">T5013, Statement of Partnership Income</a> </li>
-
+<li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t5018.html">T5018, Statement of Contract Payments</a> </li>
 </ul>
 </details>
 <table class="table table-striped small table-condensed ">
@@ -253,7 +252,7 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 <tbody>
 
 <tr>
-	<td><span class="label label-warning">New - Returns filed on or after January 1, 2024</span> 6 to 50 </td>
+	<td>6 to 50 <span class="label label-warning">New - Returns filed on or after January 1, 2024</span></td>
 	<td>$125  </td>
 </tr>
 
@@ -285,9 +284,9 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.01)</a></dt> <dd> Late filing penalty - prescribed information returns</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.02)</a></dt> <dd> Penalty for failure to file an information return in an appropriate manner (slips)</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITA Reg 205.1(1)</a></dt> <dd>  Electronic filing requirement if over 5 information returns</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.01)</a></dt> <dd> Late filing penalty - Prescribed information returns</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.02)</a></dt> <dd> Failure to file in appropriate manner – Prescribed information returns </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITA Reg 205.1(1)</a></dt> <dd>  Electronic filing requirement </dd>
 
 </dl>
 </div>
