--- a/payroll/file/distribute.html
+++ b/payroll/file/distribute.html
@@ -110,8 +110,8 @@
 
 <dl class="dl-horizontal">
 <dt>T4 slips<br>T4A slips<br> T4A-NR slips<br> T4A-RCA slips</dt><dd>
-You <strong>must </strong>provide your employees or recipients with their slips by the <strong>last day of February</strong> following the calendar year to which the slips apply</dd>
-<dt>T1204 slips<br>T5018 slips</dt><dd>You are <strong>not</strong> required to distribute the slips (you may still provide a copy of the slip to the recipient) </dd>
+You <strong>must </strong>provide your employees or recipients with their slips by the <strong>last day of February</strong> of the following the calendar year to which the slips apply.</dd>
+<dt>T1204 slips<br>T5018 slips</dt><dd>You are <strong>not</strong> required to distribute the slips. You may still provide a copy of the slip to the recipient. </dd>
 </dl>
 
 
