--- a/subway/acwb/claim.html
+++ b/subway/acwb/claim.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Who is eligible - Canada workers benefit - Canada.ca</title>
+         <title>How to claim - Canada workers benefit - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -61,14 +61,14 @@
             <nav class="gc-subway provisional">
                <h1>Canada workers benefit</h1>
                <ul>
-                  <li><a href="#" class="active">Who is eligible</a></li>
-                  <li><a href="#">How to claim</a></li>
+                  <li><a href="#">Who is eligible</a></li>
+                  <li><a href="#" class="active">How to claim</a></li>
                   <li><a href="#">CWB payments</a></li>
                  
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">Who is eligible</h1>
-            <p>Depending on your income and other circumstances, you may be eligible for the Canada workers benefit (CWB).</p>
+            <h1 property="name" id="wb-cont" class="gc-thickline">How to claim</h1>
+            <p>You can claim the Canada workers benefit (CWB) when you file your tax return. The Advanced Canada workers benefit (ACWB) will be issued to you automatically.</p>
             <h2 class="h3">On this page</h2>
             <ul>
                <li><a href="#h-1">Eligibility for the basic amount</a></li>
