--- a/subway/acwb/index.html
+++ b/subway/acwb/index.html
@@ -77,11 +77,11 @@
                      <nav class="gc-subway provisional">
                         <h2>Sections</h2>
                         <dl>
-                           <dt><a href="#">Who is eligible</a></dt>
+                           <dt><a href="eligible.html">Who is eligible</a></dt>
                            <dd>Find out if you are eligible to receive the CWB</dd>
-                           <dt><a href="#">How to claim the CWB</a></dt>
+                           <dt><a href="claim.html">How to claim the CWB</a></dt>
                            <dd>Learn how to claim the CWB</dd>
-                           <dt><a href="#">CWB benefit amounts and when you will receive them</a></dt>
+                           <dt><a href="amounts.html">CWB benefit amounts and when you will receive them</a></dt>
                            <dd>Find out how much you are eligible for and when you will receive your payments</dd>
                            
                         </dl>
