--- a/subway/acwb/eligible.html
+++ b/subway/acwb/eligible.html
@@ -61,9 +61,9 @@
             <nav class="gc-subway provisional">
                <h1>Canada workers benefit</h1>
                <ul>
-                  <li><a href="#" class="active">Who is eligible</a></li>
-                  <li><a href="#">How to claim</a></li>
-                  <li><a href="#">CWB payments</a></li>
+                  <li><a href="eligible.html" class="active">Who is eligible</a></li>
+                  <li><a href="claim.html">How to claim</a></li>
+                  <li><a href="amounts.html">CWB payments</a></li>
                  
                </ul>
             </nav>
@@ -143,7 +143,7 @@
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
-                  <li class="next"><a href="section2-en.html" rel="next"><span class="wb-inv">Next: </span>How to claim</a></li>
+                  <li class="next"><a href="claim.html" rel="next"><span class="wb-inv">Next: </span>How to claim</a></li>
                </ul>
             </nav>
             <div id="def-preFooter"></div>
