--- a/subway/acwb/index.html
+++ b/subway/acwb/index.html
@@ -81,7 +81,7 @@
                            <dd>Find out if you are eligible to receive the CWB</dd>
                            <dt><a href="claim.html">How to claim the CWB</a></dt>
                            <dd>Learn how to claim the CWB</dd>
-                           <dt><a href="amounts.html">CWB benefit amounts and when you will receive them</a></dt>
+                           <dt><a href="amounts.html">How much you can get</a></dt>
                            <dd>Find out how much you are eligible for and when you will receive your payments</dd>
                            
                         </dl>
