--- a/subway/acwb/claim.html
+++ b/subway/acwb/claim.html
@@ -63,7 +63,7 @@
                <ul>
                   <li><a href="#">Who is eligible</a></li>
                   <li><a href="#" class="active">How to claim</a></li>
-                  <li><a href="#">CWB payments</a></li>
+                  <li><a href="#">How much you can get</a></li>
                  
                </ul>
             </nav>
@@ -100,7 +100,7 @@
             <nav class="gc-subway-pagination">
                <h2 class="wb-inv">Document navigation</h2>
                <ul class="pager">
-                  <li class="next"><a href="section2-en.html" rel="next"><span class="wb-inv">Next: </span>How to claim</a></li>
+                  <li class="next"><a href="amounts.html" rel="next"><span class="wb-inv">Next: </span>How much you can get</a></li>
                </ul>
             </nav>
             <div id="def-preFooter"></div>
