--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -9,7 +9,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Who is eligible - Canada workers benefit - Canada.ca</title>
+         <title>How much you can get - Canada workers benefit - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -61,20 +61,24 @@
             <nav class="gc-subway provisional">
                <h1>Canada workers benefit</h1>
                <ul>
-                  <li><a href="eligible.html" class="active">Who is eligible</a></li>
+                  <li><a href="eligible.html">Who is eligible</a></li>
                   <li><a href="claim.html">How to claim</a></li>
-                  <li><a href="amounts.html">CWB payments</a></li>
+                  <li><a href="amounts.html" class="active">How much you can get</a></li>
                  
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">Who is eligible</h1>
-            <p>Depending on your income and other circumstances, you may be eligible for the Canada workers benefit (CWB).</p>
+            <h1 property="name" id="wb-cont" class="gc-thickline">How much you can get</h1>
+            <p>The amount you can expect to receive for the Canada workers benefit (CWB) depends on <a href="/en/revenue-agency/services/child-family-benefits/canada-workers-benefit/net-income-not-eligible.html">your income and your province or territory of residence</a>.</p>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Eligibility for the basic amount</a></li>
-               <li><a href="#h-2">Eligibility for the disability supplement</a></li>
-               <li><a href="#h-3">Eligibility for the Advanced Canada workers benefit (ACWB)</a></li>
-               <li><a href="#h-4">Life changes that affect the ACWB</a></li>
+               <li><a href="#h-1">The maximum basic CWB</a></li>
+               <li><a href="#h-2">The maximum disability supplement</a></li>
+               <li><a href="#h-3">How the CRA calculates your CWB payment amount</a></li>
+               <li><a href="#h-4">How to calculate the ACWB payment amount</a></li>
+		                   <li><a href="#h-5">How the CRA will determine the recipient for married or common-law spouses</a></li>
+		    		                   <li><a href="#h-6">Advanced Canada workers benefit payment dates</a></li>
+
+
             </ul>
             <h2 id="h-1">Eligibility for the basic amount</h2>
             <p>You are eligible for the basic amount of the CWB if you:</p>
