--- a/payroll/remit/how.html
+++ b/payroll/remit/how.html
@@ -109,7 +109,7 @@
 </ul>
  
 <h2 id="h-0">Which method to use based on your situation</h2> 
-<p><span class="label label-warning">New</span> You <strong>must</strong> remit (pay) electronically if your payment is <strong>more than $10,000</strong> and the payment is made <strong>on or after January 1, 2024</strong>.</p>
+<p><span class="label label-warning">New - 2024</span> You <strong>must</strong> remit (pay) electronically if your payment is <strong>more than $10,000</strong> and the payment is made <strong>on or after January 1, 2024</strong>.</p>
 
 <dl class="dl-horizontal">
 <dt>No employees or seasonal workers</dt><dd>
@@ -118,31 +118,32 @@
 <p id="online">Use: <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/business-account.html">My Business Account</a> or <a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Represent a Client</a></details> 
 <details><summary>Automated TeleReply service</summary>
 <p id="tele">You can report by calling the automated TeleReply service </p>
-<p>TeleReply is an automated telephone service for reporting nil remittances. To use it, call <strong>1-800-959-2256</strong>. If you use TeleReply, you do not need to send a paper remittance voucher, and you will receive an immediate confirmation.</p>
+<p>TeleReply is an automated telephone service for reporting nil remittances. To use it, call <strong>1-800-959-2256</strong>. </p>
+<p>If you use TeleReply, you do not need to send a paper remittance voucher, and you will receive an immediate confirmation.</p>
 <p>If you are a client of the Workers' Compensation Board (WCB) of Nova Scotia, you can also use TeleReply to tell the Board that you have no WCB remittance to make.</p>
-<p>Learn more on TeleReply for non-resident accounts: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/remitting-source-deductions/non-resident-telereply.html">Non-Resident TeleReply</a></p>
+<p>Learn more about TeleReply for non-resident accounts: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/remitting-source-deductions/non-resident-telereply.html">Non-Resident TeleReply</a></p>
 <h3>Who cannot use TeleReply</h3>
 <p>You <strong>cannot </strong>use TeleReply if <strong>one</strong> of the following applies:</p>
 
 <ul>
-<li>you paid remuneration and had to make source deductions </li>
-<li>you need to change your legal name or address </li>
-<li>you have changed your business status </li>
-<li>you are calling from outside Canada </li>
-<li>you need to change a previous reply </li>
+<li>You paid remuneration and had to make source deductions </li>
+<li>You need to change your legal name or address </li>
+<li>You have changed your business status </li>
+<li>You are calling from outside Canada </li>
+<li>You need to change a previous reply </li>
 </ul>
 <p>If you cannot use TeleReply, refer to: reporting a nil remittance <a href="#online">online</a> or by <a href="#mail">mail</a>.</p>
 <h3>Before you call TeleReply</h3>
 <p>Have <strong>all</strong> the following information available before you call TeleReply:</p>
 
 <ul>
-<li>your payroll program (RP) account number </li>
-<li>the reason you are reporting a nil remittance </li>
-<li>the date when you expect to next make source deductions </li>
+<li>Your payroll program (RP) account number </li>
+<li>The reason you are reporting a nil remittance </li>
+<li>The date when you expect to next make source deductions </li>
 </ul>
 <p>For best results, and to ensure your privacy, do not use a cordless or cellular telephone or one with the keypad in the handset. If at any time during the call, the automated system says you cannot use TeleReply, you will need to report your nil remittance online or by mail.</p>
 <h3>Hours of operation</h3>
-<p>You can use TeleReply every day from 6:00 a.m. to 3:00 a.m. Eastern time.</p>
+<p>You can use TeleReply every day from 6:00 a.m. to 3:00 a.m. Eastern Standard Time.</p>
 <h3>How to use TeleReply</h3>
 <p>To use TeleReply, simply call <strong>1-800-959-2256</strong>, and follow the instructions. At the end of the call, you will need to confirm the information you entered, and wait for a confirmation number.</p>
 <p>To report a nil remittance with TeleReply, you can do one of the following:</p>
@@ -177,7 +178,7 @@
     Fill out the appropriate section of your <a href="/cra-arc/payroll/remit/pd7a.html">Form PD7A, Statement of account for current source deductions</a>
   </li>
   <li class="cnjnctn-col">
-    <p>Write the CRA a letter and include <strong>all</strong> of the following:</p>
+    <p>Write a letter to the CRA and include <strong>all</strong> of the following:</p>
 
 <ul>
 <li>Your name, position, and telephone number </li>
@@ -192,15 +193,15 @@
 </dd>
 
 <dt>Quarterly, regular or accelerated remitters with a threshold 1</dt> <dd>
-<details><summary>Any methods, including electronically or at your financial intitution in Canada</summary>
+<details><summary>Any method, including electronically or at your financial intitution in Canada</summary>
 <p>You <strong>can</strong> use any approved methods, including electronically or at your <a href="#h-6">Canadian financial institution</a>.</p>
-<p>Learn more on the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
+<p>Learn more about the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 </details>
 <details><summary>Payments on filing (PoF) - Reconciliation payment</summary>
 <p>When filing your T4 information return, you may be <strong>eligible </strong>to use the new remittance method to make a reconciliation payment on or before the last day of February without being subject to a penalty or interest. </p>
 
 <p>Learn more on <strong>eligibility</strong>: <a href="/cra-arc/payroll/remit/pd7r.html">Remittance voucher for Payment on Filing (PoF) Source Deductions - PD7R</a></p>
-<p>Learn more on the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
+<p>Learn more about the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 
 
 </details>
@@ -208,7 +209,7 @@
 <dt>Accelerated remitter with a threshold 2</dt> <dd>
 <details><summary>Electronically or at your financial intitution in Canada</summary>
 <p>You <strong>must </strong>remit either electronically or at your <a href="#h-6">Canadian financial institution</a>.</p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
+<p>Learn more about the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 </details></dd>
 </dl>
 
@@ -228,7 +229,6 @@
 <h2 id="h-2">What happens if you have a balance owing</h2>
 <p>If the CRA assesses you, keep your payment for the assessment separate from your source deductions and contributions. </p>
 <p><strong>Do not </strong>combine your arrears payment with a current remittance.</p>
-<p>Learn more about the options available to pay your balance owing (arrears): <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 <p>If you pay: </p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -236,23 +236,24 @@
     Electronically, use <strong>only </strong>arrears or balance owing remitting options
   </li>
   <li class="cnjnctn-col">
-    <p>At your financial institution or by mail, use only the arrears remittance voucher attached to your form PD7D (if you do not have an arrears remittance voucher, mail your payment with a note clearly stating that it is for your arrears or balance owing. </p>
+    <p>At your financial institution or by mail, use only the arrears remittance voucher attached to your form PD7D (if you do not have an arrears remittance voucher, mail your payment with a note clearly stating that it is for your arrears or balance owing) </p>
   </li>
 </ul>
+<p>Learn more about the options available to pay your balance owing (arrears): <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 
 <h2 id="h-7">What happens if you remit (pay) using the wrong method</h2>
 <p>If you are <strong>required</strong> to but do not <a href="#h-0">remit electronically</a> or at a financial institution, you may have to pay a penalty in the following situations:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-  <li class="cnjnctn-col-60"><h4 class="text-muted"><span class="label label-warning">New</span> Payments of more than $10,000</h4>
+  <li class="cnjnctn-col-60"><h4 class="text-muted"><span class="label label-warning">New - 2024</span> Payments of more than $10,000</h4>
 <p>The CRA may charge you a penalty of $100 for each failure to remit (pay) electronically if your payment is <strong>more than $10,000</strong> and the payment is made <strong>on or after January 1, 2024</strong>.</p>
 </li>
 <li class="cnjnctn-col"><h4 class="text-muted">Accelerated remitter with a threshold 2</h4>
 <p>The CRA may charge you the following penalty if you are an accelerated remitter with a threshold 2:</p>
 <ul class="list-unstyled cnjnctn-type-or">
   <li class="cnjnctn-col"><h5>Payment made one full day before the due date</h5>
-<p>Under the CRA administrative policy, no penalty will be charged because the payment is considered made at a financial institution</p>
+<p>Under the CRA administrative policy, no penalty will be charged because the payment is considered made when paid at a financial institution</p>
 </li>
-<li class="cnjnctn-col"><h5>Payment made on the due date but not at a financial institution</h5>
+<li class="cnjnctn-col"><h5>Payment made on the due date but not electronically or in person at a financial institution</h5>
 <p>A penalty of 3% of the amount due </p>
 </li>
 
@@ -276,9 +277,9 @@
 <div class="row">
 <div class="col-xs-12">
 <dl class="dl-horizontal">
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 160.5(12)</a></dt> <dd> Electronic payment requirement</dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.4)</a></dt> <dd> Penalty for failure to remit (pay) electronically</dd>
-
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 160.5(2)</a></dt> <dd> Requirement - Electronic payments</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.4)</a></dt> <dd> Penalty - Electronic payments</dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-194.html#docCont:~:text=Marginal%20note%3A-,Penalty,-(9)%C2%A0Subject">ITA 227(9)</a></dt> <dd> Penalty</dd>
 </dl>
 </div>
 </div>
