--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -80,12 +80,13 @@
 
 
             </ul>
-            <h2 id="h-1">Eligibility for the basic amount</h2>
-            <p>You are eligible for the basic amount of the CWB if you:</p>
-            <ul class="fa-ul">
-	<li><span class="fas fa-check text-success fa-li"></span> 
+            <h2 id="h-1">The maximum basic CWB</h2>
+            <p>The maximum basic amount for the CWB is:</p>
+            <ul>
+	<li> 
             
-               earn working income</li>
+		<p><strong>$1,428 for single individuals</strong></p>
+		    <p>The amount is gradually reduced if your adjusted net income is more than $23,495. No basic amount is paid if your adjusted net income is more than $33,015.</p></li>
                <li><span class="fas fa-check text-success fa-li"></span> are a resident of Canada throughout the year</li>
                <li><span class="fas fa-check text-success fa-li"></span> are 19 years of age or older on December 31, or you live with your spouse or common-law partner or your child</li>
             </ul>
