--- a/payroll/file/how.html
+++ b/payroll/file/how.html
@@ -286,7 +286,7 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 <dl class="dl-horizontal">
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.01)</a></dt> <dd> Late filing penalty - Prescribed information returns</dd>
 <dt><a href="https://laws-lois.justice.gc.ca/eng/acts/I-3.3/page-152.html#docCont">ITA 162(7.02)</a></dt> <dd> Failure to file in appropriate manner – Prescribed information returns </dd>
-<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITA Reg 205.1(1)</a></dt> <dd>  Electronic filing requirement </dd>
+<dt><a href="https://laws-lois.justice.gc.ca/eng/regulations/c.r.C.,_c._945/page-5.html#h-584108">ITA Reg 205.1(1)</a></dt> <dd>  Electronic filing </dd>
 
 </dl>
 </div>
