--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -93,10 +93,14 @@
             <p>The maximum basic CWB amount will vary for residents of Quebec, Nunavut and Alberta.
          
 		 
-            <h2 id="h-2">Eligibility for the disability supplement</h2>
-            <p>You may be eligible for the disability supplement of the CWB if:</p>
-		 <ul class="fa-ul">
-	<li><span class="fas fa-check text-success fa-li"></span>you are eligible for the disability tax credit and have an approved Form <a href="/en/revenue-agency/services/forms-publications/forms/t2201.html">T2201, Disability Tax Credit Certificate</a>, on file with the CRA</li>
+            <h2 id="h-2">The maximum disability supplement</h2>
+            <p>The maximum amount for the disability supplement is:</p>
+		 <ul>
+			 <li><p><strong>$737 for single individuals</strong></p>
+			 <p>The CWB disability supplement is gradually reduced if your adjusted net income is more than $33,018. No disability supplement is paid if your adjusted net income is more than $37,932.</p></li>
+			 <li><p><strong>$737 for families</strong></p>
+				 <p>The CWB disability supplement is gradually reduced if your adjusted family net income is more than $43,210. No disability supplement is paid if one spouse is eligible for the disability tax credit and your adjusted family net income is more than $48,124, or if both spouses are eligible for the disability tax credit and your adjusted family net income is more than $53,037.</p></li>
+			 <p>The maximum amount for the disability supplement will vary for residents of Quebec and Nunavut.
 		 </ul>
 		 
             <h2 id="h-3">Eligibility for the Advanced Canada workers benefit (ACWB)</h2>
