--- a/payroll/remit/how.html
+++ b/payroll/remit/how.html
@@ -193,7 +193,7 @@
 </dd>
 
 <dt>Quarterly, regular or accelerated remitters with a threshold 1</dt> <dd>
-<details><summary>Any method, including electronically or at your financial intitution in Canada</summary>
+<details><summary>Any method, including electronically or at your financial institution in Canada</summary>
 <p>You <strong>can</strong> use any approved methods, including electronically or at your <a href="#h-6">Canadian financial institution</a>.</p>
 <p>Learn more about the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 </details>
@@ -207,7 +207,7 @@
 </details>
 </dd>
 <dt>Accelerated remitter with a threshold 2</dt> <dd>
-<details><summary>Electronically or at your financial intitution in Canada</summary>
+<details><summary>Electronically or at your financial institution in Canada</summary>
 <p>You <strong>must </strong>remit either electronically or at your <a href="#h-6">Canadian financial institution</a>.</p>
 <p>Learn more about the <strong>methods you can use to make a payment</strong>: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/business-payments/make-payment.html">Make a payment for a business</a>, and select payroll source deductions</p>
 </details></dd>
