--- a/subway/acwb/amounts.html
+++ b/subway/acwb/amounts.html
@@ -100,12 +100,20 @@
 			 <p>The CWB disability supplement is gradually reduced if your adjusted net income is more than $33,018. No disability supplement is paid if your adjusted net income is more than $37,932.</p></li>
 			 <li><p><strong>$737 for families</strong></p>
 				 <p>The CWB disability supplement is gradually reduced if your adjusted family net income is more than $43,210. No disability supplement is paid if one spouse is eligible for the disability tax credit and your adjusted family net income is more than $48,124, or if both spouses are eligible for the disability tax credit and your adjusted family net income is more than $53,037.</p></li>
-			 <p>The maximum amount for the disability supplement will vary for residents of Quebec and Nunavut.
 		 </ul>
+			 <p>The maximum amount for the disability supplement will vary for residents of Quebec and Nunavut.
 		 
-            <h2 id="h-3">Eligibility for the Advanced Canada workers benefit (ACWB)</h2>
-            <p>If you are eligible for and entitled to receive the CWB, you can get up to 50% of your CWB in advance payments under the ACWB. If you are entitled to receive the disability supplement, you will also receive 50% of your disability supplement amount with your basic ACWB.</p>
-<p>You must be a resident of Canada on the first day of the quarter to be eligible for the ACWB issuance.</p>
+		 
+            <h2 id="h-3">How the CRA calculates your CWB payment amount</h2>
+            <p>The Canada Revenue Agency (CRA) uses all of the following information to calculate your CWB:</p>
+		 <ul>
+			 <li>marital status - <a href="eligible.html#whoaneligiblespouseis">eligible spouse</a></li>
+			 <li>province or territory of residence</li>
+			 <li>earned working income</li>
+			 <li>adjusted family net income</li>
+			 <li><ahref="eligible.html#whoaneligibledependant is">eligible dependant</a></li>
+			 <li>eligibility for the disability tax credit</li>
+		 </ul>
 		 
 		 <h2 id="h-4">Life changes that affect the ACWB</h2>
             <p>The only life event changes that will affect the ACWB are death, incarceration, or emigration.</p>
